# fxt

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
doc/: config.ini.example  configuration.md  features.md  index.md  quick-start.md
docs/: FEATURES.md
example/ltr-gov2/: cv.py  dat.sh  gov2.txt  lgbm.sh  oracle.sh  shuf.sh
include/fxt/: doc_entry.hpp  doc_entry_flag.hpp  doc_lens.hpp  feature_extractor.hpp  feature_presenter.hpp  fgen_term_util.hpp  field_id.hpp  field_map.hpp  forward_index.hpp  forward_index_interactor.hpp  inverted_index.hpp  lexicon.hpp  query_environment_adapter.hpp  query_train_file.hpp  statdoc_entry.hpp  statdoc_entry_flag.hpp  static_feature.hpp  stopwords.h  term_feature.hpp  trec_run_file.hpp  util.hpp  w_scanner.hpp  web_1t_stopwords.hpp
include/fxt/features/: doc_feature.hpp  features.hpp
include/fxt/features/bm25/: bm25.hpp  doc_bm25_atire_feature.hpp  doc_bm25_feature.hpp  doc_bm25_trec3_feature.hpp  doc_bm25_trec3_kmax_feature.hpp
include/fxt/features/bose_einstein/: be.hpp  doc_be_feature.hpp
include/fxt/features/dfr/: dfr.hpp  doc_dfr_feature.hpp
include/fxt/features/doc_feature/: document_features.hpp
include/fxt/features/dph/: doc_dph_feature.hpp  dph.hpp
include/fxt/features/lmds/: doc_lm_dir_1000_feature.hpp  doc_lm_dir_1500_feature.hpp  doc_lm_dir_2500_feature.hpp  doc_lm_dir_feature.hpp  lm.hpp
include/fxt/features/probability/: doc_prob_feature.hpp  prob.hpp
include/fxt/features/proximity/: bm25_proximity.hpp  doc_proximity_feature.hpp  doc_sdm_feature.hpp  sdm.hpp  tp_dist.hpp
include/fxt/features/static/: web_document.hpp  wikipedia.hpp
include/fxt/features/stream/: doc_stream_feature.hpp
include/fxt/features/tfidf/: doc_tfidf_feature.hpp  tfidf.hpp
include/fxt/features/tpscore/: doc_tpscore_feature.hpp
include/tesserae/: doc_entry.hpp  doc_entry_flag.hpp  doc_lens.hpp  feature_extractor.hpp  feature_presenter.hpp  fgen_term_util.hpp  field_id.hpp  field_map.hpp  forward_index.hpp  forward_index_interactor.hpp  inverted_index.hpp  lexicon.hpp  query_environment_adapter.hpp  query_train_file.hpp  statdoc_entry.hpp  statdoc_entry_flag.hpp  static_feature.hpp  stopwords.h  term_feature.hpp  trec_run_file.hpp  util.hpp  w_scanner.hpp  web_1t_stopwords.hpp
include/tesserae/features/: doc_feature.hpp  features.hpp
include/tesserae/features/bm25/: bm25.hpp  doc_bm25_atire_feature.hpp  doc_bm25_feature.hpp  doc_bm25_trec3_feature.hpp  doc_bm25_trec3_kmax_feature.hpp
include/tesserae/features/bose_einstein/: be.hpp  doc_be_feature.hpp
include/tesserae/features/dfr/: dfr.hpp  doc_dfr_feature.hpp
include/tesserae/features/doc_feature/: document_features.hpp
include/tesserae/features/dph/: doc_dph_feature.hpp  dph.hpp
include/tesserae/features/lmds/: doc_lm_dir_1000_feature.hpp  doc_lm_dir_1500_feature.hpp  doc_lm_dir_2500_feature.hpp  doc_lm_dir_feature.hpp  lm.hpp
include/tesserae/features/probability/: doc_prob_feature.hpp  prob.hpp
include/tesserae/features/proximity/: bm25_proximity.hpp  doc_proximity_feature.hpp  doc_sdm_feature.hpp  sdm.hpp  tp_dist.hpp
include/tesserae/features/static/: wikipedia.hpp
include/tesserae/features/stream/: doc_stream_feature.hpp
include/tesserae/features/tfidf/: doc_tfidf_feature.hpp  tfidf.hpp
include/tesserae/features/tpscore/: doc_tpscore_feature.hpp
include/text2feat/: doc_entry.hpp  doc_entry_flag.hpp  doc_lens.hpp  feature_extractor.hpp  feature_presenter.hpp  fgen_term_util.hpp  field_id.hpp  field_map.hpp  forward_index.hpp  inverted_index.hpp  lexicon.hpp  query_environment_adapter.hpp  query_train_file.hpp  statdoc_entry.hpp  statdoc_entry_flag.hpp  static_feature.hpp  stopwords.h  term_feature.hpp  trec_run_file.hpp  w_scanner.hpp  web_1t_stopwords.hpp
include/text2feat/features/: doc_feature.hpp  features.hpp
include/text2feat/features/bm25/: bm25.hpp  doc_bm25_atire_feature.hpp  doc_bm25_feature.hpp  doc_bm25_trec3_feature.hpp  doc_bm25_trec3_kmax_feature.hpp
include/text2feat/features/bose_einstein/: be.hpp  doc_be_feature.hpp
include/text2feat/features/dfr/: dfr.hpp  doc_dfr_feature.hpp
include/text2feat/features/doc_feature/: document_features.hpp
include/text2feat/features/dph/: doc_dph_feature.hpp  dph.hpp
include/text2feat/features/lmds/: doc_lm_dir_1000_feature.hpp  doc_lm_dir_1500_feature.hpp  doc_lm_dir_2500_feature.hpp  doc_lm_dir_feature.hpp  lm.hpp
include/text2feat/features/probability/: doc_prob_feature.hpp  prob.hpp
include/text2feat/features/proximity/: bm25_proximity.hpp  doc_proximity_feature.hpp  tp_dist.hpp
include/text2feat/features/stream/: doc_stream_feature.hpp
include/text2feat/features/tfidf/: doc_tfidf_feature.hpp  tfidf.hpp
include/text2feat/features/tpscore/: doc_tpscore_feature.hpp
script/: csv2svm.awk  doc-features.sh  feat2flag.sh  feat2ini.sh  feat2struct.sh  features.template  label.awk  mk-nodeid-docno.sh  shuffle.sh  stopwords.sh  termfeat_expand.awk  trecrank.awk  trimsvm.awk
src/: CMakeLists.txt  compression.cpp  create_bigram_inverted_index.cpp  create_doc_lens.cpp  create_forward_index.cpp  create_inverted_index.cpp  create_lexicon.cpp  dump_fixture.cpp  extract_features.cpp  extractor.cpp  fgen_bigram_qry.c  fgen_bigram_qry.cpp  fgen_bigram_qry.h  fgen_bigram_qry.hpp  fgen_term_qry.c  fgen_term_qry.cpp  fgen_term_qry.h  fgen_term_qry.hpp  forward_index.cpp  generate_document_features.cpp  generate_static_doc_features.cpp  generate_term_features.cpp  indexer.cpp  inlink.cpp  inverted_index.cpp  kstem.cpp  outlink.cpp  preret_csv.cpp  query_features.c  query_features.cpp  query_features.h  strbuf.c  strbuf.h
test/: Makefile  bm25.cpp  foo.cpp  forward_index.cpp  forward_index_interactor.cpp  lexicon.cpp  lmds.cpp  sdm.cpp  static_webdocument.cpp  static_wikipedia.cpp
test/fixture/: stub_index.hpp  stub_query.hpp
